versioned_docs/version-4.1.x/reference/functions/Block-ADTAppExecution.mdx
---
id: Block-ADTAppExecution
title: Block-ADTAppExecution
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Block the execution of an application(s).

## SYNTAX

```powershell
Block-ADTAppExecution [-Processes] <ProcessDefinition[]> [[-WindowLocation] <DialogPosition>] [-WhatIf]
 [-Confirm] [<CommonParameters>]
```

## DESCRIPTION

This function is called when you pass the -BlockExecution parameter to the Stop-RunningApplications function.
It does the following:

1) Makes a copy of this script in a temporary directory on the local machine.
2) Checks for an existing scheduled task from previous failed installation attempt where apps were blocked and if found, calls the Unblock-ADTAppExecution function to restore the original IFEO registry keys.
This is to prevent the function from overriding the backup of the original IFEO options.
3) Creates a scheduled task to restore the IFEO registry key values in case the script is terminated uncleanly by calling `Unblock-ADTAppExecution` the local temporary copy of this module.
4) Modifies the "Image File Execution Options" registry key for the specified process(s) to call `Show-ADTInstallationPrompt` with the appropriate messaging via this module.
5) When the script is called with those parameters, it will display a custom message to the user to indicate that execution of the application has been blocked while the installation is in progress.
The text of this message can be customized in the strings.psd1 file.

## EXAMPLES

### EXAMPLE 1

```powershell
Block-ADTAppExecution -Processes ('winword','excel')
```

This example blocks the execution of Microsoft Word and Excel.

## PARAMETERS

### -Processes

Name of the process or processes separated by commas.

```yaml
Type: ProcessDefinition[]
Parameter Sets: (All)
Aliases: ProcessName

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -WindowLocation

The location of the dialog on the screen.

```yaml
Type: DialogPosition
Parameter Sets: (All)
Aliases:
Accepted values: Default, TopLeft, Top, TopRight, TopCenter, Center, BottomLeft, Bottom, BottomRight, BottomCenter

Required: False
Position: 2
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -WhatIf

Shows what would happen if the cmdlet runs.
The cmdlet is not run.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Confirm

Prompts you for confirmation before running the cmdlet.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### None

### This function does not generate any output.
## NOTES
An active ADT session is required to use this function.

It is used when the -BlockExecution parameter is specified with the Show-ADTInstallationWelcome function to block applications.

This function supports the -WhatIf and -Confirm parameters for testing changes before applying them.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2026 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[https://psappdeploytoolkit.com/docs/reference/functions/Block-ADTAppExecution](https://psappdeploytoolkit.com/docs/reference/functions/Block-ADTAppExecution)
